# xbot_talker

./: .gitignore  .package.xml.swp  CMakeLists.txt  README.md  package.xml
assets/: aiui.cfg  dictionary.txt  grammar.bnf  greeting.txt  new_dictionary.txt
assets/msc/res/tts/: xiaofeng.jet  xiaoyan.jet
assets/save/: greeting.txt  new_dictionary.txt
debian/: changelog  control  rules
include/: AIUITest.h  Talker.h  linuxrec.h  speech_recognizer.h
include/aiui/: AIUI.h  AIUICommon.h  AIUIConstant.h  AIUIErrorCode.h  AIUIType.h
launch/: talker.launch
msg/: talk_monitor.msg
src/: CMakeLists.txt  FileUtil.cpp  Talker.cpp  client.cpp  linuxrec.cpp  main.cpp  request_play_client.cpp  request_talker_client.cpp  speech_recognizer.cpp
srv/: chat.srv  play.srv
